--- a/.github/workflows/release-ios.yml
+++ b/.github/workflows/release-ios.yml
@@ -30,13 +30,7 @@ jobs:
           mkdir -p ${{ github.workspace }}/go
           cd ${{ github.workspace }}/siyuan-note/
 
-          git clone --branch ${{ github.event.inputs.version }} --depth=1 https://github.com/siyuan-note/siyuan.git
-          cd siyuan
-
-          git apply ${{ github.workspace }}/siyuan-note/patches/siyuan/disable-update.patch
-          git apply ${{ github.workspace }}/siyuan-note/patches/siyuan/mock-vip-user.patch
-
-          cd ..
+          git clone --branch ${{ github.event.inputs.version }} --depth=1 https://github.com/dahuzi-gege/siyuan.git
 
           git clone --depth=1 https://github.com/siyuan-note/siyuan-ios.git
           cd siyuan-ios
