--- a/.github/workflows/release-ios.yml
+++ b/.github/workflows/release-ios.yml
@@ -30,7 +30,7 @@ jobs:
           mkdir -p ${{ github.workspace }}/go
           cd ${{ github.workspace }}/siyuan-note/
 
-          git clone --branch ${{ github.event.inputs.version }} --depth=1 https://github.com/dahuzi-gege/siyuan.git
+          git clone --branch ${{ github.event.inputs.version }} --depth=1 https://github.com/younghuzi/siyuan.git
 
           git clone --depth=1 https://github.com/siyuan-note/siyuan-ios.git
           cd siyuan-ios
